Reducing contact font size to fix alignment in low res

--- a/public_html/stylesheets/nilenso.css
+++ b/public_html/stylesheets/nilenso.css
@@ -268,7 +268,7 @@ section i:hover {
 
 .contact {
   font-family: "Quattrocento";
-  font-size: 40px;
+  font-size: 30px;
   background-color: #333;
   color: #EEE;
   padding: 40px 66px;
